fix some bug on mobile

--- a/views/mobile/assets/css/index.scss
+++ b/views/mobile/assets/css/index.scss
@@ -37,7 +37,7 @@
 }
 .book-category{
   width: 170px;
-  height: 240px;
+  height: 260px;
   margin: 1em;
   float: left;
   font-size: 8px;
@@ -57,7 +57,7 @@
   position: relative;
   overflow-x: auto;
   overflow-y: hidden;
-  height: 265px;
+  height: 285px;
   background-color: #fff;
   margin: 0 auto;
   white-space: nowrap;
@@ -73,7 +73,7 @@
 
     .book-recently{
       width: 150px;
-      height: 250px;
+      height: 270px;
       margin: 1em;
       float: left;
       font-size: 8px;
@@ -92,7 +92,7 @@
   position: relative;
   overflow-x: auto;
   overflow-y: hidden;
-  height: 250px;
+  height: 270px;
   background-color: #fff;
   margin: 0 auto;
   white-space: nowrap;
